--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,7 @@ ext {
     compileSdkVersion = 27
     targetSdkVersion = 27
 
-    kotlin_version = '1.2.40'
+    kotlinVerseion = '1.2.40'
     androidPluginVersion = '3.1.2'
 
     glideVersion = '4.1.1'
