--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,6 +6,7 @@ ext {
 
     kotlinVerseion = '1.2.40'
     androidPluginVersion = '3.1.2'
+    ankoVersion = '0.10.3'
 
     glideVersion = '4.1.1'
     gsonVersion = '2.7'
